[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "oldest-supported-numpy"
]

[project]
name = "tsblender"
dynamic = ["version", "readme"]
description = "Drop-in replacement for TSPROC that is a utility for inverse modeling with PEST."
dependencies = [
    "cltoolbox >= 1.0.0",
    "flopy",
    "fortranformat",
    "hspf_reader",
    "hydrotoolbox >= 2.0.0",
    "numpy",
    "pandas",
    "pint-pandas",
    "pydantic",
    "pyemu",
    "python-dateutil",
    "toolbox_utils >= 5.0.0, < 6.0.0",
    "tstoolbox >= 106.0.0",
    "xlsxwriter"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "baseflow",
    "cli-app",
    "hydrology",
    "parameter-estimation",
    "python",
    "time-series",
    "tsproc"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "blacken-docs",
    "black-nbconvert",
    "cleanpy",
    "commitizen",
    "coverage[toml]",
    "isort",
    "mypy",
    "pre-commit",
    "pyflakes",
    "pylama",
    "pyle",
    "pylint",
    "pyre",
    "pyroma",
    "pytest",
    "pytest-cov",
    "pytest-mpl",
    "pyupgrade",
    "twine",
    "unimport",
    "velin",
    "vulture"
]

[project.scripts]
tsblender = "tsblender.tsblender:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/tsblender/docs/index.html#tsblender-documentation"
github = "https://github.com/timcera/tsblender"
bitbucket = "https://bitbucket.org/timcera/tsblender/src/main/"

[tool.check-manifest]
ignore = [
    "docs/_function_autosummary/*",
    ".coverage",
    ".deepsource.toml",
    ".ipynb_checkpoints/*"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "103.1.1"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "tools*", "docs*", "tsblender.tests*"]
where = ["src"]

[tool.setuptools_scm]
