[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[simple]>=8",
    "setuptools>=80"
]

[project]
authors = [
    {email = "tim@cerazone.net", name = "Tim Cera"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
] # Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
dependencies = [
    "cltoolbox >= 1.0.0",
    "dateparser",
    "flopy",
    "fortranformat",
    "hspf_reader",
    "hydrotoolbox >= 2.0.12",
    "numpy <2.0; python_version == '3.9'",
    "pandas[excel]",
    "pint!=0.21.*",
    "pint-pandas",
    "pydantic",
    "pyemu",
    "python-dateutil",
    "tstoolbox >= 106.0.0",
    "xlsxwriter"
]
description = "Drop-in replacement for TSPROC that is a utility for inverse modeling with PEST."
dynamic = ["readme", "version"]
keywords = [
    "baseflow",
    "cli-app",
    "hydrology",
    "parameter-estimation",
    "python",
    "time-series",
    "tsproc"
]
license = {text = "BSD-3-Clause"}
name = "tsblender"
readme = "README.rst"
requires-python = ">=3.10"

[project.scripts]
tsblender = "tsblender.tsblender:main"

[project.urls]
bitbucket = "https://bitbucket.org/timcera/tsblender/src/main/"
documentation = "https://timcera.bitbucket.io/tsblender/docs/index.html#tsblender-documentation"
github = "https://github.com/timcera/tsblender"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "103.3.0"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
